--- a/index.html
+++ b/index.html
@@ -189,155 +189,11 @@
     <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
 </head>
 <body itemscope itemtype="https://schema.org/WebPage">
-    <!-- Header -->
-    <header class="header" role="banner" itemscope itemtype="https://schema.org/WPHeader">
-        <div class="container">
-            <div class="header-content">
-                <!-- Logo -->
-                <div class="logo">
-                    <h1>Youkoso</h1>
-                </div>
-
-                <!-- Navigation -->
-                <nav class="nav">
-                    <ul class="nav-list">
-                        <li><a href="index.html" class="nav-link active">Inicio</a></li>
-                        <li><a href="products.html" class="nav-link">Productos</a></li>
-                        <li><a href="blog.html" class="nav-link">Blog</a></li>
-                        <li><a href="about.html" class="nav-link">Nosotros</a></li>
-                        <li><a href="contact.html" class="nav-link">Contacto</a></li>
-                    </ul>
-                </nav>
-
-                <!-- Header Actions -->
-                <div class="header-actions">
-                    <!-- Language Toggle -->
-                    <div class="language-toggle">
-                        <button class="lang-btn active" data-lang="es">ES</button>
-                        <button class="lang-btn" data-lang="en">EN</button>
-                        <button class="lang-btn" data-lang="ja">日本語</button>
-                    </div>
-
-                    <!-- Theme Toggle -->
-                    <button class="theme-toggle" aria-label="Cambiar tema">
-                        <i class="fas fa-moon"></i>
-                    </button>
-
-                    <!-- Cart -->
-                    <div class="cart">
-                        <button class="cart-btn" aria-label="Carrito de compras">
-                            <i class="fas fa-shopping-cart"></i>
-                            <span class="cart-count">0</span>
-                        </button>
-                    </div>
-
-                    <!-- Mobile Menu Toggle -->
-                    <button class="mobile-menu-toggle" aria-label="Menú móvil">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </button>
-                </div>
-            </div>
-
-            <!-- Mobile Menu -->
-            <div class="mobile-menu">
-                <ul class="mobile-nav-list">
-                    <li><a href="index.html" class="mobile-nav-link">Inicio</a></li>
-                    <li><a href="products.html" class="mobile-nav-link">Productos</a></li>
-                    <li><a href="blog.html" class="mobile-nav-link">Blog</a></li>
-                    <li><a href="about.html" class="mobile-nav-link">Nosotros</a></li>
-                    <li><a href="contact.html" class="mobile-nav-link">Contacto</a></li>
-                </ul>
-            </div>
-        </div>
-    </header>
+    <!-- Header Placeholder -->
+    <div id="header-placeholder"></div>
 
     <!-- Main Content -->
     <main class="main" id="main-content" role="main" itemscope itemtype="https://schema.org/CollectionPage">
-        <!-- Hero Section - Modern Redesign -->
-        <section class="hero-modern">
-            <div class="hero-container">
-                <div class="hero-content-wrapper">
-                    <div class="hero-main">
-                        <div class="hero-badge">
-                            <span class="es-text">Auténtico desde Japón</span>
-                            <span class="en-text">Authentic from Japan</span>
-                            <span class="ja-text">日本から本物を</span>
-                        </div>
-                        <h1 class="hero-headline">
-                            <span class="es-text">Cultura<br>Japonesa<br>Sin Límites</span>
-                            <span class="en-text">Japanese<br>Culture<br>Without Limits</span>
-                            <span class="ja-text">限界のない<br>日本文化</span>
-                        </h1>
-                        <p class="hero-subtitle">
-                            <span class="es-text">
-                                Explora nuestra colección curada de productos auténticos japoneses. 
-                                Desde anime hasta artesanías tradicionales.
-                            </span>
-                            <span class="en-text">
-                                Explore our curated collection of authentic Japanese products. 
-                                From anime to traditional crafts.
-                            </span>
-                            <span class="ja-text">
-                                厳選された本格的な日本製品のコレクションをご覧ください。
-                                アニメから伝統工芸品まで。
-                            </span>
-                        </p>
-                        <div class="hero-actions">
-                            <a href="products.html" class="hero-btn hero-btn-primary">
-                                <span class="es-text">Comenzar a Explorar</span>
-                                <span class="en-text">Start Exploring</span>
-                                <span class="ja-text">探索を開始</span>
-                                <svg class="hero-btn-icon" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                                    <path d="M7.5 15L12.5 10L7.5 5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                </svg>
-                            </a>
-                            <a href="#featured-products" class="hero-btn hero-btn-ghost">
-                                <span class="es-text">Ver Destacados</span>
-                                <span class="en-text">View Featured</span>
-                                <span class="ja-text">注目を見る</span>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="hero-visual">
-                        <div class="hero-image-container">
-                            <div class="hero-image-wrapper">
-                                <div class="hero-image-glow"></div>
-                                <img src="assets/images/ui/hero-bg.jpg" 
-                                     alt="Japanese Culture" 
-                                     class="hero-image"
-                                     loading="eager"
-                                     onerror="this.style.display='none'; this.parentElement.innerHTML='<div class=\'hero-image-placeholder\'><i class=\'fas fa-image\'></i></div>'">
-                            </div>
-                            <div class="hero-stats">
-                                <div class="hero-stat">
-                                    <span class="hero-stat-number">500+</span>
-                                    <span class="hero-stat-label">
-                                        <span class="es-text">Productos</span>
-                                        <span class="en-text">Products</span>
-                                        <span class="ja-text">製品</span>
-                                    </span>
-                                </div>
-                                <div class="hero-stat">
-                                    <span class="hero-stat-number">4.9★</span>
-                                    <span class="hero-stat-label">
-                                        <span class="es-text">Calificación</span>
-                                        <span class="en-text">Rating</span>
-                                        <span class="ja-text">評価</span>
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="hero-background-elements">
-                <div class="hero-gradient-orb hero-gradient-orb-1"></div>
-                <div class="hero-gradient-orb hero-gradient-orb-2"></div>
-                <div class="hero-gradient-orb hero-gradient-orb-3"></div>
-            </div>
-        </section>
 
         <!-- Categories Section -->
         <section class="categories">
@@ -531,127 +387,8 @@
     </main>
 
     <!-- Footer -->
-    <footer class="footer" role="contentinfo" itemscope itemtype="https://schema.org/WPFooter">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-section">
-                    <h3 class="footer-title">Youkoso</h3>
-                    <p class="footer-description">
-                        <span class="es-text">Tu tienda de confianza para productos japoneses auténticos.</span>
-                        <span class="ja-text">本格的な日本製品の信頼できる店舗。</span>
-                    </p>
-                    <div class="social-links">
-                        <a href="#" class="social-link" aria-label="Facebook">
-                            <i class="fab fa-facebook"></i>
-                        </a>
-                        <a href="#" class="social-link" aria-label="Instagram">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                        <a href="#" class="social-link" aria-label="Twitter">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        <a href="#" class="social-link" aria-label="YouTube">
-                            <i class="fab fa-youtube"></i>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="footer-section">
-                    <h4 class="footer-subtitle">
-                        <span class="es-text">Enlaces Rápidos</span>
-                        <span class="ja-text">クイックリンク</span>
-                    </h4>
-                    <ul class="footer-links">
-                        <li><a href="products.html" class="footer-link">
-                            <span class="es-text">Productos</span>
-                            <span class="ja-text">商品</span>
-                        </a></li>
-                        <li><a href="blog.html" class="footer-link">
-                            <span class="es-text">Blog</span>
-                            <span class="ja-text">ブログ</span>
-                        </a></li>
-                        <li><a href="about.html" class="footer-link">
-                            <span class="es-text">Nosotros</span>
-                            <span class="ja-text">私たちについて</span>
-                        </a></li>
-                        <li><a href="contact.html" class="footer-link">
-                            <span class="es-text">Contacto</span>
-                            <span class="ja-text">お問い合わせ</span>
-                        </a></li>
-                    </ul>
-                </div>
-
-                <div class="footer-section">
-                    <h4 class="footer-subtitle">
-                        <span class="es-text">Categorías</span>
-                        <span class="ja-text">カテゴリー</span>
-                    </h4>
-                    <ul class="footer-links">
-                        <li><a href="products.html?category=figuras" class="footer-link">
-                            <span class="es-text">Figuras</span>
-                            <span class="ja-text">フィギュア</span>
-                        </a></li>
-                        <li><a href="products.html?category=peluches" class="footer-link">
-                            <span class="es-text">Peluches</span>
-                            <span class="ja-text">ぬいぐるみ</span>
-                        </a></li>
-                        <li><a href="products.html?category=manga" class="footer-link">
-                            <span class="es-text">Manga</span>
-                            <span class="ja-text">マンガ</span>
-                        </a></li>
-                        <li><a href="products.html?category=ropa" class="footer-link">
-                            <span class="es-text">Ropa</span>
-                            <span class="ja-text">服</span>
-                        </a></li>
-                    </ul>
-                </div>
-
-                <div class="footer-section">
-                    <h4 class="footer-subtitle">
-                        <span class="es-text">Contacto</span>
-                        <span class="ja-text">お問い合わせ</span>
-                    </h4>
-                    <div class="contact-info">
-                        <p class="contact-item">
-                            <i class="fas fa-envelope"></i>
-                            <span>info@youkoso.com</span>
-                        </p>
-                        <p class="contact-item">
-                            <i class="fas fa-phone"></i>
-                            <span>+52 (55) 1234-5678</span>
-                        </p>
-                        <p class="contact-item">
-                            <i class="fas fa-map-marker-alt"></i>
-                            <span>Ciudad de México, México</span>
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="footer-bottom">
-                <div class="footer-bottom-content">
-                    <p class="copyright">
-                        <span class="es-text">&copy; 2024 Youkoso Todos los derechos reservados.</span>
-                        <span class="ja-text">&copy; 2024 Youkoso すべての権利を保有しています。</span>
-                    </p>
-                    <div class="footer-bottom-links">
-                        <a href="#" class="footer-bottom-link">
-                            <span class="es-text">Política de Privacidad</span>
-                            <span class="ja-text">プライバシーポリシー</span>
-                        </a>
-                        <a href="#" class="footer-bottom-link">
-                            <span class="es-text">Términos de Servicio</span>
-                            <span class="ja-text">利用規約</span>
-                        </a>
-                        <a href="admin.html" class="footer-bottom-link">
-                            <span class="es-text">Administrador</span>
-                            <span class="ja-text">管理者ログイン</span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
+    <!-- Footer Placeholder -->
+    <div id="footer-placeholder"></div>
 
     <!-- Notification Container -->
     <div id="notifications" class="notifications-container"></div>
