--- a/about.html
+++ b/about.html
@@ -534,94 +534,10 @@
     </style>
 </head>
 <body>
-    <!-- Header -->
-    <header class="header">
-        <div class="container">
-            <div class="header-content">
-                <!-- Logo -->
-                <div class="logo">
-                    <a href="index.html" style="text-decoration: none; color: inherit;">
-                        <h1>Youkoso</h1>
-                    </a>
-                </div>
-
-                <!-- Navigation -->
-                <nav class="nav">
-                    <ul class="nav-list">
-                        <li><a href="index.html" class="nav-link">Inicio</a></li>
-                        <li><a href="products.html" class="nav-link">Productos</a></li>
-                        <li><a href="blog.html" class="nav-link">Blog</a></li>
-                        <li><a href="about.html" class="nav-link active">Nosotros</a></li>
-                        <li><a href="contact.html" class="nav-link">Contacto</a></li>
-                    </ul>
-                </nav>
-
-                <!-- Header Actions -->
-                <div class="header-actions">
-                    <!-- Language Toggle -->
-                    <div class="language-toggle">
-                        <button class="lang-btn active" data-lang="es">ES</button>
-                        <button class="lang-btn" data-lang="ja">日本語</button>
-                    </div>
-
-                    <!-- Theme Toggle -->
-                    <button class="theme-toggle" aria-label="Cambiar tema">
-                        <i class="fas fa-moon"></i>
-                    </button>
-
-                    <!-- Cart -->
-                    <div class="cart">
-                        <button class="cart-btn" aria-label="Carrito de compras">
-                            <i class="fas fa-shopping-cart"></i>
-                            <span class="cart-count">0</span>
-                        </button>
-                    </div>
-
-                    <!-- Mobile Menu Toggle -->
-                    <button class="mobile-menu-toggle" aria-label="Menú móvil">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </button>
-                </div>
-            </div>
-
-            <!-- Mobile Menu -->
-            <div class="mobile-menu">
-                <ul class="mobile-nav-list">
-                    <li><a href="index.html" class="mobile-nav-link">Inicio</a></li>
-                    <li><a href="products.html" class="mobile-nav-link">Productos</a></li>
-                    <li><a href="blog.html" class="mobile-nav-link">Blog</a></li>
-                    <li><a href="about.html" class="mobile-nav-link">Nosotros</a></li>
-                    <li><a href="contact.html" class="mobile-nav-link">Contacto</a></li>
-                </ul>
-            </div>
-        </div>
-    </header>
+    <div id="header-placeholder"></div>
 
     <!-- Main Content -->
     <main class="main">
-        <!-- Enhanced Hero Section -->
-        <section class="about-hero">
-            <div class="floating-elements">
-                <div class="floating-element"></div>
-                <div class="floating-element"></div>
-                <div class="floating-element"></div>
-                <div class="floating-element"></div>
-            </div>
-            <div class="container">
-                <div class="about-hero-content fade-in">
-                    <h1>
-                        <span class="es-text">Nuestra Historia</span>
-                        <span class="ja-text">私たちの物語</span>
-                    </h1>
-                    <p>
-                        <span class="es-text">Conectando culturas a través de productos japoneses auténticos</span>
-                        <span class="ja-text">本格的な日本製品を通じて文化をつなぐ</span>
-                    </p>
-                </div>
-            </div>
-        </section>
 
         <!-- Enhanced Story Section -->
         <section class="enhanced-story">
@@ -893,128 +809,7 @@
         </section>
     </main>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-section">
-                    <h3 class="footer-title">Youkoso</h3>
-                    <p class="footer-description">
-                        <span class="es-text">Tu tienda de confianza para productos japoneses auténticos.</span>
-                        <span class="ja-text">本格的な日本製品の信頼できる店舗。</span>
-                    </p>
-                    <div class="social-links">
-                        <a href="#" class="social-link" aria-label="Facebook">
-                            <i class="fab fa-facebook"></i>
-                        </a>
-                        <a href="#" class="social-link" aria-label="Instagram">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                        <a href="#" class="social-link" aria-label="Twitter">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        <a href="#" class="social-link" aria-label="YouTube">
-                            <i class="fab fa-youtube"></i>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="footer-section">
-                    <h4 class="footer-subtitle">
-                        <span class="es-text">Enlaces Rápidos</span>
-                        <span class="ja-text">クイックリンク</span>
-                    </h4>
-                    <ul class="footer-links">
-                        <li><a href="products.html" class="footer-link">
-                            <span class="es-text">Productos</span>
-                            <span class="ja-text">商品</span>
-                        </a></li>
-                        <li><a href="blog.html" class="footer-link">
-                            <span class="es-text">Blog</span>
-                            <span class="ja-text">ブログ</span>
-                        </a></li>
-                        <li><a href="about.html" class="footer-link">
-                            <span class="es-text">Nosotros</span>
-                            <span class="ja-text">私たちについて</span>
-                        </a></li>
-                        <li><a href="contact.html" class="footer-link">
-                            <span class="es-text">Contacto</span>
-                            <span class="ja-text">お問い合わせ</span>
-                        </a></li>
-                    </ul>
-                </div>
-
-                <div class="footer-section">
-                    <h4 class="footer-subtitle">
-                        <span class="es-text">Categorías</span>
-                        <span class="ja-text">カテゴリー</span>
-                    </h4>
-                    <ul class="footer-links">
-                        <li><a href="products.html?category=figuras" class="footer-link">
-                            <span class="es-text">Figuras</span>
-                            <span class="ja-text">フィギュア</span>
-                        </a></li>
-                        <li><a href="products.html?category=peluches" class="footer-link">
-                            <span class="es-text">Peluches</span>
-                            <span class="ja-text">ぬいぐるみ</span>
-                        </a></li>
-                        <li><a href="products.html?category=manga" class="footer-link">
-                            <span class="es-text">Manga</span>
-                            <span class="ja-text">マンガ</span>
-                        </a></li>
-                        <li><a href="products.html?category=ropa" class="footer-link">
-                            <span class="es-text">Ropa</span>
-                            <span class="ja-text">服</span>
-                        </a></li>
-                    </ul>
-                </div>
-
-                <div class="footer-section">
-                    <h4 class="footer-subtitle">
-                        <span class="es-text">Contacto</span>
-                        <span class="ja-text">お問い合わせ</span>
-                    </h4>
-                    <div class="contact-info">
-                        <p class="contact-item">
-                            <i class="fas fa-envelope"></i>
-                            <span>info@youkoso.com</span>
-                        </p>
-                        <p class="contact-item">
-                            <i class="fas fa-phone"></i>
-                            <span>+52 (55) 1234-5678</span>
-                        </p>
-                        <p class="contact-item">
-                            <i class="fas fa-map-marker-alt"></i>
-                            <span>Ciudad de México, México</span>
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="footer-bottom">
-                <div class="footer-bottom-content">
-                    <p class="copyright">
-                        <span class="es-text">&copy; 2024 Youkoso Todos los derechos reservados.</span>
-                        <span class="ja-text">&copy; 2024 Youkoso すべての権利を保有しています。</span>
-                    </p>
-                    <div class="footer-bottom-links">
-                        <a href="#" class="footer-bottom-link">
-                            <span class="es-text">Política de Privacidad</span>
-                            <span class="ja-text">プライバシーポリシー</span>
-                        </a>
-                        <a href="#" class="footer-bottom-link">
-                            <span class="es-text">Términos de Servicio</span>
-                            <span class="ja-text">利用規約</span>
-                        </a>
-                        <a href="admin.html" class="footer-bottom-link">
-                            <span class="es-text">Administrador</span>
-                            <span class="ja-text">管理者ログイン</span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
+    <div id="footer-placeholder"></div>
 
     <!-- Notification Container -->
     <div id="notifications" class="notifications-container"></div>
