--- a/blog.html
+++ b/blog.html
@@ -785,69 +785,8 @@
         <div class="particle" style="left: 90%;"></div>
     </div>
 
-    <!-- Header -->
-    <header class="header">
-        <div class="container">
-            <div class="header-content">
-                <!-- Logo -->
-                <div class="logo">
-                    <h1>Youkoso</h1>
-                </div>
-
-                <!-- Navigation -->
-                <nav class="nav">
-                    <ul class="nav-list">
-                        <li><a href="index.html" class="nav-link">Inicio</a></li>
-                        <li><a href="products.html" class="nav-link">Productos</a></li>
-                        <li><a href="blog.html" class="nav-link active">Blog</a></li>
-                        <li><a href="about.html" class="nav-link">Nosotros</a></li>
-                        <li><a href="contact.html" class="nav-link">Contacto</a></li>
-                    </ul>
-                </nav>
-
-                <!-- Header Actions -->
-                <div class="header-actions">
-                    <!-- Language Toggle -->
-                    <div class="language-toggle">
-                        <button class="lang-btn active" data-lang="es">ES</button>
-                        <button class="lang-btn" data-lang="en">EN</button>
-                        <button class="lang-btn" data-lang="ja">日本語</button>
-                    </div>
-
-                    <!-- Theme Toggle -->
-                    <button class="theme-toggle" aria-label="Cambiar tema">
-                        <i class="fas fa-moon"></i>
-                    </button>
-
-                    <!-- Cart -->
-                    <div class="cart">
-                        <button class="cart-btn" aria-label="Carrito de compras">
-                            <i class="fas fa-shopping-cart"></i>
-                            <span class="cart-count">0</span>
-                        </button>
-                    </div>
-
-                    <!-- Mobile Menu Toggle -->
-                    <button class="mobile-menu-toggle" aria-label="Menú móvil">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </button>
-                </div>
-            </div>
-
-            <!-- Mobile Menu -->
-            <div class="mobile-menu">
-                <ul class="mobile-nav-list">
-                    <li><a href="index.html" class="mobile-nav-link">Inicio</a></li>
-                    <li><a href="products.html" class="mobile-nav-link">Productos</a></li>
-                    <li><a href="blog.html" class="mobile-nav-link">Blog</a></li>
-                    <li><a href="about.html" class="mobile-nav-link">Nosotros</a></li>
-                    <li><a href="contact.html" class="mobile-nav-link">Contacto</a></li>
-                </ul>
-            </div>
-        </div>
-    </header>
+    <!-- Header Placeholder -->
+    <div id="header-placeholder"></div>
 
     <!-- Main Content -->
     <main class="main">
@@ -1147,45 +1086,8 @@
         </section>
     </main>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-logo">
-                    <h1>Youkoso</h1>
-                </div>
-
-                <div class="footer-links">
-                    <a href="index.html" class="footer-link">Inicio</a>
-                    <a href="products.html" class="footer-link">Productos</a>
-                    <a href="blog.html" class="footer-link">Blog</a>
-                    <a href="about.html" class="footer-link">Nosotros</a>
-                    <a href="contact.html" class="footer-link">Contacto</a>
-                </div>
-            </div>
-
-            <div class="footer-bottom">
-                <div class="footer-bottom-links">
-                    <a href="#" class="footer-bottom-link">
-                        <span class="es-text">Política de Privacidad</span>
-                        <span class="ja-text">プライバシーポリシー</span>
-                    </a>
-                    <a href="#" class="footer-bottom-link">
-                        <span class="es-text">Términos de Servicio</span>
-                        <span class="ja-text">利用規約</span>
-                    </a>
-                    <a href="admin.html" class="footer-bottom-link">
-                        <span class="es-text">Administrador</span>
-                        <span class="ja-text">管理者ログイン</span>
-                    </a>
-                </div>
-
-                <div class="footer-copy">
-                    <p>© 2024 Youkoso - Todos los derechos reservados.</p>
-                </div>
-            </div>
-        </div>
-    </footer>
+    <!-- Footer Placeholder -->
+    <div id="footer-placeholder"></div>
 
     <!-- Scripts -->
     <script src="js/core-simple.js"></script>
