--- a/blog4.html
+++ b/blog4.html
@@ -656,71 +656,7 @@
         <div class="floating-element">🌈</div>
     </div>
 
-    <!-- Header -->
-    <header class="header">
-        <div class="container">
-            <div class="header-content">
-                <!-- Logo -->
-                <div class="logo">
-                    <a href="index.html">
-                        <h1>Youkoso</h1>
-                        <span class="logo-subtitle">本物の日本</span>
-                    </a>
-                </div>
-
-                <!-- Navigation -->
-                <nav class="nav">
-                    <ul class="nav-list">
-                        <li><a href="index.html" class="nav-link">Inicio</a></li>
-                        <li><a href="products.html" class="nav-link">Productos</a></li>
-                        <li><a href="blog.html" class="nav-link active">Blog</a></li>
-                        <li><a href="about.html" class="nav-link">Nosotros</a></li>
-                        <li><a href="contact.html" class="nav-link">Contacto</a></li>
-                    </ul>
-                </nav>
-
-                <!-- Header Actions -->
-                <div class="header-actions">
-                    <!-- Language Toggle -->
-                    <div class="language-toggle">
-                        <button class="lang-btn active" data-lang="es">ES</button>
-                        <button class="lang-btn" data-lang="ja">日本語</button>
-                    </div>
-
-                    <!-- Theme Toggle -->
-                    <button class="theme-toggle" aria-label="Cambiar tema">
-                        <i class="fas fa-moon"></i>
-                    </button>
-
-                    <!-- Cart -->
-                    <div class="cart">
-                        <button class="cart-btn" aria-label="Carrito de compras">
-                            <i class="fas fa-shopping-cart"></i>
-                            <span class="cart-count">0</span>
-                        </button>
-                    </div>
-
-                    <!-- Mobile Menu Toggle -->
-                    <button class="mobile-menu-toggle" aria-label="Menú móvil">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </button>
-                </div>
-            </div>
-
-            <!-- Mobile Menu -->
-            <div class="mobile-menu">
-                <ul class="mobile-nav-list">
-                    <li><a href="index.html" class="mobile-nav-link">Inicio</a></li>
-                    <li><a href="products.html" class="mobile-nav-link">Productos</a></li>
-                    <li><a href="blog.html" class="mobile-nav-link">Blog</a></li>
-                    <li><a href="about.html" class="mobile-nav-link">Nosotros</a></li>
-                    <li><a href="contact.html" class="mobile-nav-link">Contacto</a></li>
-                </ul>
-            </div>
-        </div>
-    </header>
+    <div id="header-placeholder"></div>
 
     <!-- Main Content -->
     <main class="main">
@@ -1055,89 +991,7 @@
         </section>
     </main>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-section">
-                    <h3 class="footer-title">Youkoso</h3>
-                    <p class="footer-description">Tu tienda de confianza para productos japoneses auténticos.</p>
-                    <div class="social-links">
-                        <a href="#" class="social-link" aria-label="Facebook">
-                            <i class="fab fa-facebook"></i>
-                        </a>
-                        <a href="#" class="social-link" aria-label="Instagram">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                        <a href="#" class="social-link" aria-label="Twitter">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        <a href="#" class="social-link" aria-label="YouTube">
-                            <i class="fab fa-youtube"></i>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="footer-section">
-                    <h4 class="footer-subtitle">Enlaces Rápidos</h4>
-                    <ul class="footer-links">
-                        <li><a href="products.html" class="footer-link">Productos</a></li>
-                        <li><a href="blog.html" class="footer-link">Blog</a></li>
-                        <li><a href="about.html" class="footer-link">Nosotros</a></li>
-                        <li><a href="contact.html" class="footer-link">Contacto</a></li>
-                    </ul>
-                </div>
-
-                <div class="footer-section">
-                    <h4 class="footer-subtitle">Categorías</h4>
-                    <ul class="footer-links">
-                        <li><a href="blog.html?category=anime" class="footer-link">Anime</a></li>
-                        <li><a href="blog.html?category=manga" class="footer-link">Manga</a></li>
-                        <li><a href="blog.html?category=cultura" class="footer-link">Cultura</a></li>
-                        <li><a href="blog.html?category=gaming" class="footer-link">Gaming</a></li>
-                    </ul>
-                </div>
-
-                <div class="footer-section">
-                    <h4 class="footer-subtitle">Contacto</h4>
-                    <div class="contact-info">
-                        <p class="contact-item">
-                            <i class="fas fa-envelope"></i>
-                            <span>info@youkoso.com</span>
-                        </p>
-                        <p class="contact-item">
-                            <i class="fas fa-phone"></i>
-                            <span>+52 (55) 1234-5678</span>
-                        </p>
-                        <p class="contact-item">
-                            <i class="fas fa-map-marker-alt"></i>
-                            <span>Ciudad de México, México</span>
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="footer-bottom">
-                <div class="footer-bottom-content">
-                    <p class="copyright">&copy; 2024 Youkoso Todos los derechos reservados.</p>
-                    <div class="footer-bottom-links">
-                        <a href="#" class="footer-bottom-link">
-                            <span class="es-text">Política de Privacidad</span>
-                            <span class="ja-text">プライバシーポリシー</span>
-                        </a>
-                        <a href="#" class="footer-bottom-link">
-                            <span class="es-text">Términos de Servicio</span>
-                            <span class="ja-text">利用規約</span>
-                        </a>
-                        <a href="admin.html" class="footer-bottom-link">
-                            <span class="es-text">Administrador</span>
-                            <span class="ja-text">管理者ログイン</span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
+    <div id="footer-placeholder"></div>
 
     <!-- JavaScript -->
     <script src="js/core-simple.js"></script>
