--- a/admin.html
+++ b/admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin - Youkoso</title>
-    <link rel="stylesheet" href="css/style-simple.css">
+    <link rel="stylesheet" href="css/style-simple.css?v=3">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         .admin-container {
@@ -1226,7 +1226,7 @@
         </div>
     </div>
 
-    <script src="js/core-simple.js"></script>
+    <script src="js/core-simple.js?v=2"></script>
     <script src="js/admin.js"></script>
 </body>
 </html>
