--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https:; connect-src 'self' https:;">
     <title>Contacto - Youkoso</title>
     <meta name="description" content="Contáctanos para cualquier pregunta sobre cultura japonesa, productos o servicios. Estamos aquí para ayudarte.">
     
@@ -51,7 +52,7 @@
     </noscript>
     
     <!-- Main CSS -->
-    <link rel="stylesheet" href="css/style-simple.css">
+    <link rel="stylesheet" href="css/style-simple.css?v=3">
 
     <style>
         /* 通知バナーのスタイル */
@@ -627,7 +628,7 @@
     <div id="notifications" class="notifications-container"></div>
 
     <!-- Scripts -->
-    <script src="js/core-simple.js"></script>
+    <script src="js/core-simple.js?v=2"></script>
     <script src="js/contact-enhanced.js"></script>
     <script>
         // 初期化
