--- a/index.html
+++ b/index.html
@@ -184,7 +184,6 @@
     <!-- Security Headers -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https:; connect-src 'self' https:;">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
-    <meta http-equiv="X-Frame-Options" content="DENY">
     <meta http-equiv="X-XSS-Protection" content="1; mode=block">
     <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
 </head>
@@ -431,6 +430,12 @@
     <!-- JavaScript -->
     <script src="js/core-simple.js?v=2"></script>
     <script src="js/main-simple.js?v=2"></script>
+    <script src="js/link-checker.js?v=1"></script>
+    <script src="js/search-enhanced.js?v=1"></script>
+    <script src="js/filter-enhanced.js?v=1"></script>
+    <script src="js/accessibility.js?v=1"></script>
+    <script src="js/mobile-enhanced.js?v=1"></script>
+    <script src="js/hero-enhanced.js?v=1"></script>
     
     <!-- Service Worker Registration -->
     <script>
