--- a/about.html
+++ b/about.html
@@ -817,6 +817,11 @@
 
     <!-- JavaScript -->
     <script src="js/core-simple.js?v=2"></script>
+    <script src="js/link-checker.js?v=1"></script>
+    <script src="js/search-enhanced.js?v=1"></script>
+    <script src="js/filter-enhanced.js?v=1"></script>
+    <script src="js/accessibility.js?v=1"></script>
+    <script src="js/mobile-enhanced.js?v=1"></script>
     <script>
         // Enhanced Scroll Animation
         const observerOptions = {
