--- a/products.html
+++ b/products.html
@@ -865,6 +865,11 @@
     <!-- JavaScript -->
     <script src="js/core-simple.js?v=2"></script>
     <script src="js/products-simple.js?v=2"></script>
+    <script src="js/link-checker.js?v=1"></script>
+    <script src="js/search-enhanced.js?v=1"></script>
+    <script src="js/filter-enhanced.js?v=1"></script>
+    <script src="js/accessibility.js?v=1"></script>
+    <script src="js/mobile-enhanced.js?v=1"></script>
     
     <script>
         // カワイイ商品ページの特別なエフェクト
