--- a/products.html
+++ b/products.html
@@ -868,7 +868,8 @@
     <script src="js/link-checker.js?v=1"></script>
     <script src="js/search-enhanced.js?v=1"></script>
     <script src="js/filter-enhanced.js?v=1"></script>
-    <script src="js/accessibility.js?v=1"></script>
+    <!-- アクセシビリティ機能無効化 -->
+    <!-- <script src="js/accessibility.js?v=1"></script> -->
     <script src="js/mobile-enhanced.js?v=1"></script>
     
     <script>
