--- a/contact.html
+++ b/contact.html
@@ -53,6 +53,10 @@
     
     <!-- Main CSS -->
     <link rel="stylesheet" href="css/style-simple.css?v=3">
+    <!-- 管理者ログインリンク強調 -->
+    <link rel="stylesheet" href="css/admin-link-highlight.css?v=1">
+    <!-- ボトムナビゲーション無効化 -->
+    <link rel="stylesheet" href="css/bottom-nav-override.css?v=1">
 
     <style>
         /* 通知バナーのスタイル */
