--- a/index.html
+++ b/index.html
@@ -175,6 +175,10 @@
     <link rel="stylesheet" href="css/hero-override.css?v=1">
     <!-- アクセシビリティ機能無効化CSS -->
     <link rel="stylesheet" href="css/accessibility-override.css?v=1">
+    <!-- 管理者ログインリンク強調 -->
+    <link rel="stylesheet" href="css/admin-link-highlight.css?v=1">
+    <!-- ボトムナビゲーション無効化 -->
+    <link rel="stylesheet" href="css/bottom-nav-override.css?v=1">
     
     <!-- Preload critical resources -->
     <link rel="preload" href="css/style-simple.css?v=3" as="style">
