--- a/admin.html
+++ b/admin.html
@@ -1013,9 +1013,9 @@
                         <div>
                             <button type="button" class="admin-btn" style="background: #3498db; margin-bottom: 0.75rem; width: 100%; display: flex; align-items: center; gap: 0.5rem; padding: 1rem; text-align: left; border-radius: 8px;" onclick="document.getElementById('productImageFile').click()">
                                 <i class="fas fa-upload" style="font-size: 1.1rem;"></i>
-                                <span class="es-text">Subir imagen desde dispositivo</span>
-                                <span class="ja-text">デバイスから画像をアップロード</span>
-                                <span class="en-text">Upload image from device</span>
+                                <span class="es-text">Subir imagen</span>
+                                <span class="ja-text">画像をアップロード</span>
+                                <span class="en-text">Upload image</span>
                             </button>
                             <button type="button" class="admin-btn" style="background: #f39c12; margin-bottom: 0.75rem; width: 100%; display: flex; align-items: center; gap: 0.5rem; padding: 1rem; text-align: left; border-radius: 8px;" onclick="previewProductImage()">
                                 <i class="fas fa-eye" style="font-size: 1.1rem;"></i>
@@ -1188,9 +1188,9 @@
                             <div>
                                 <button type="button" class="admin-btn" style="background: #3498db; margin-bottom: 0.75rem; width: 100%; display: flex; align-items: center; gap: 0.5rem; padding: 1rem; text-align: left; border-radius: 8px;" onclick="document.getElementById('blogImageFile').click()">
                                     <i class="fas fa-upload" style="font-size: 1.1rem;"></i>
-                                    <span class="es-text">Subir imagen desde dispositivo</span>
-                                    <span class="ja-text">デバイスから画像をアップロード</span>
-                                    <span class="en-text">Upload image from device</span>
+                                    <span class="es-text">Subir imagen</span>
+                                    <span class="ja-text">画像をアップロード</span>
+                                    <span class="en-text">Upload image</span>
                                 </button>
                                 <button type="button" class="admin-btn" style="background: #f39c12; margin-bottom: 0.75rem; width: 100%; display: flex; align-items: center; gap: 0.5rem; padding: 1rem; text-align: left; border-radius: 8px;" onclick="previewBlogImage()">
                                     <i class="fas fa-eye" style="font-size: 1.1rem;"></i>
